bnf.txt
Statements = Statement Statements | Statement
Statement = PlotDefinition | WorkDefinition | If | Function

x PlotDefinition = plot name { PlotBody }

x PlotBody = PlotBody' , PlotBody | PlotBody'
x PlotBody' = Coordinates | PlotType

x Coordinates = coordinates : [ Points ]
x Points = Point , Points | Point
x Point = point ( REAL , REAL )

x PlotType = type : PlotType'
x PlotType' = forest | field


WorkDefinition = work name { WorkBody }

WorkBody = WorkBody' , WorkBody | WorkBody'
WorkBody' = Path | Action | MaxSpeed | ImplementWidth | WorkPlot

Path = path : [ Paths ]
Paths = Path , Paths | Path
Path = pointt ( REAL , REAL , timestamp )

Action = action : name
MaxSpeed = max-speed : REAL
ImplementWidth = implement-width : REAL
WorkPlot = plot : name


If = if plot name If'
If' = IfIsValid | IfContains
IfIsValid = is valid { Statements }
IfContains = contains name { Statements }

// Functions = Function Functions | Function
Function = CalculatePath | CalculateArea | CalculateEfficiency | CalculateAreaCovered

CalculatePath = calculatepath ( name , name )
CalculateArea = calculatearea ( name )
CalculateEfficiency = calculateefficiency ( name , name )
CalculateAreaCovered = calculateareacovered ( name )
